# depthai-experiments

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  README.zh-CN.md  gen3_script_tester.py  main_lite.py  test.py
age-gender/: README.md  README.zh-CN.md
anomaly-detection/: README.md
apps/: README.md
blur-faces/: README.md
boot-utils/: main.py  requirements.txt
bounding-box-filtering/: README.md
box_measurement/: README.md
calc-spatials-on-host/: README.md
camera-controls/: README.md
camera-demo/: README.md  README.zh-CN.md
class-saver-jpeg/: README.md  README.zh-CN.md
cloud-compile-model/: README.md  local.py  zoo.py
collecting-training-data/: README.md  README.zh-CN.md  gen2_main.py  main.py  requirements.txt
collision-avoidance/: README.md  README.zh-CN.md  crash_avoidance.py  depthai_utils.py  main.py  requirements.txt  tracker.py
conference-demos/: README.md
connectivity/: README.md
container-encoding/: README.md
coronamask/: README.md  README.zh-CN.md  config.py  depthai_utils.py  main.py  requirements.txt
crestereo-stereo-matching/: README.md
crowdcounting/: README.md
cumulative-object-counting/: README.md
custom-models/: README.md
deeplabv3_depth/: README.md
deeplabv3_multiclass/: README.md
deeplabv3_person/: README.md  README.zh-CN.md
deepsort-tracking/: README.md
demo-ui/: README.md  install.sh  start.sh
depth-color-alignment-test/: README.md  alignment_test.py  camera.py  config.py  host_sync.py  main.py  requirements.txt
depth-driven-focus/: README.md
depth-mbnv2/: README.md
depth-measurement/: README.md
depth-people-counting/: README.md
depth-test_z-acc_spatial-noise/: .gitignore  README.md  README_GUI.md  astra_camera.py  (+40 more)
gen3-gaze-estimation-cpp/: .gitmodules  CMakeLists.txt  face-detection-retail-0004.blob  gaze-estimation-adas-0002.blob  head-pose-estimation-adas-0001.blob  landmarks-regression-retail-0009.blob  script.py
gen3-gaze-estimation-cpp/src/: MultiMsgSync.cpp  bbox.cpp  main.cpp
(+3422 files in other folders)
